--- a/static/css/tasks.css
+++ b/static/css/tasks.css
@@ -85,7 +85,7 @@ a:hover{
     border-radius: 3px 0 0 3px;
     width: 85%;
     padding: 0 0 0 10px;
-    margin: 0;
+    margin: 0 0 0 25px;
     box-sizing: border-box;
     height: 50px;
     font-size: 18px;
@@ -100,6 +100,9 @@ a:hover{
     padding: 0;
     height: 50px;
     width: 50px;
+}
+.btn form{
+    width: 100%;
 }
 
 .btn:hover{
