--- a/static/css/LoginRegister.css
+++ b/static/css/LoginRegister.css
@@ -91,3 +91,18 @@
     color: var(--border);
     transition-duration: 0.2s;
 }
+
+.email-info{
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    width: 80%;
+}
+
+.email-info form{
+    width: 80%;
+}
+.email-info button{
+    width: 80%;
+}
