--- a/templates/_base.html
+++ b/templates/_base.html
@@ -31,6 +31,10 @@
             <li class="info-para">Structure the information</li>
             <li class="info-para">Save your time</li>
         </ul>
+        <div class="info-bottom-content">
+            <a class="info-link" href="https://github.com/Glashiii/ToDo-app" >
+                <img src="{% static '/images/github-142-svgrepo-com.svg'  %}" alt="Github"></a>
+        </div>
     </div>
 </div>
 
