--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,14 +1,22 @@
-{% extends "account/base_entrance.html" %}
+{% extends "_base.html" %}
+{% load static %}
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
     {% trans "Change Password" %}
 {% endblock head_title %}
+{% block head-content %}
+    <link rel="stylesheet" href="{% static 'css/LoginRegister.css' %}">
+{% endblock %}
 {% block content %}
     {% element h1 %}
         {% trans "Change Password" %}
     {% endelement %}
-    {% element p %}
+    <div id="reset-pass-done">
+    {% element p%}
         {% trans 'Your password is now changed.' %}
+        
     {% endelement %}
+    </div>
+    <a id="url-login" href="{% url 'login' %}">Log in</a>
 {% endblock content %}
