--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,15 +1,17 @@
-{% extends "account/base_entrance.html" %}
+{% extends "_base.html" %}
+{% load static %}
 {% load i18n allauth account %}
-{% block head_title %}
+{% block title %}
     {% trans "Password Reset" %}
-{% endblock head_title %}
+{% endblock title %}
+
+{% block head-content %}
+    <link rel="stylesheet" href="{% static 'css/LoginRegister.css' %}">
+{% endblock %}
 {% block content %}
     {% element h1 %}
         {% trans "Password Reset" %}
     {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
     {% element p %}
         {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
     {% endelement %}
