--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,9 +1,13 @@
-{% extends "account/base_entrance.html" %}
+{% extends "_base.html" %}
+{% load static %}
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
     {% trans "Change Password" %}
 {% endblock head_title %}
+{% block head-content %}
+    <link rel="stylesheet" href="{% static 'css/LoginRegister.css' %}">
+{% endblock %}
 {% block content %}
     {% element h1 %}
         {% if token_fail %}
@@ -15,25 +19,27 @@
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
         {% element p %}
-            {% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
+            {% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please
+                request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
         {% endelement %}
     {% else %}
-        {% element form method="post" action=action_url %}
-            {% slot body %}
-                {% csrf_token %}
-                {{ redirect_field }}
-                {% element fields form=form %}
-                {% endelement %}
-            {% endslot %}
-            {% slot actions %}
-                {% element button type="submit" name="action" %}
-                    {% trans 'Change Password' %}
-                {% endelement %}
-                {% element button type="submit" form="logout-from-stage" tags="link,cancel" %}
-                    {% translate "Cancel" %}
-                {% endelement %}
-            {% endslot %}
-        {% endelement %}
+        <form method="post" action="{{ action_url }}">
+            {% csrf_token %}
+            {{ form.non_field_errors }}
+
+            <p>
+                {{ form.password1.label_tag }}
+                {{ form.password1 }}
+                {{ form.password1.errors }}
+            </p>
+            <p>
+                {{ form.password2.label_tag }}
+                {{ form.password2 }}
+                {{ form.password2.errors }}
+            </p>
+
+            <button type="submit">Save new password</button>
+        </form>
     {% endif %}
     {% if not cancel_url %}
         <form id="logout-from-stage"
