--- a/templates/tasks/profile.html
+++ b/templates/tasks/profile.html
@@ -10,9 +10,7 @@
 
         <div class="messages">
             {% if messages %}
-                {% for message in messages %}
-                    <div class="msg {{ message.tags }}">{{ message }}</div>
-                {% endfor %}
+                <div class="msg {{ message.tags }}">{{ message|last }}</div>
             {% endif %}
         </div>
 
@@ -79,7 +77,7 @@
                 </div>
             </form>
         </div>
-    
+
         <div class="panel" id="panel-logout">
             <h3>You want to log out?</h3>
             <form action="{% url 'logout' %}" method="post" id="btn-logout">
