--- a/templates/_base.html
+++ b/templates/_base.html
@@ -15,6 +15,11 @@
 </head>
 <body>
 <div class="left-side">
+    <div class="left-side-top-info">
+        <h1 class="header">Glashiii's ToDo</h1>
+        <p class="info-para">Create a plan, be effective</p>
+    </div>
+    
     {% block content %}
     {% endblock %}
     <div class="bottom">
